# 141-saliency-maps-trading

./: 01_saliency_maps_trading.ipynb  README.md  README.ru.md  README.specify.md  __init__.py  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  model.py  saliency.py  train.py
rust_examples/: Cargo.toml  README.md  README.ru.md
rust_examples/examples/: backtest.rs  fetch_data.rs  saliency_trading.rs
rust_examples/src/: lib.rs
rust_examples/src/api/: bybit.rs  mod.rs
rust_examples/src/models/: mod.rs  network.rs
rust_examples/src/saliency/: gradient.rs  mod.rs
